Changes for 1.6
* Allowed defenseless attackers to be able to retreat if they can, instead of being forced to die. (veqryn)

* Possible fix for "Record Battle Statistics" occuring multiple times. (veqryn)

* Allowed all defending or attacking units to die, when there are none left who are capable of throwing dice. (veqryn)

* Fixed issue with maxScrambleCount not keeping track of scrambles for different sea zones by the same land territory. (veqryn)

* Semi-Fixed issue with not being able to retreat from a scrambled air defense. You can now retreat anywhere that does not have enemies. User should know where they came from and make legal move. (veqryn) 

* Fixed issue with unloaded ground units not dying or being removed, even if their transports die from a scrambled air defense. (veqryn)

* Disallowing any unloading of ground units to a friendly territory, during combat move, if we have scrambling or kamikazes turned on. (veqryn)

* Fixed issue with "Scramble To Any Amphibious Assault" not working at all. (veqryn)

* Created new game option, "Use Bombing Max Dice Sides And Bonus", which will control the unit attachment options: "bombingMaxDieSides" and "bombingBonus". (veqryn)

* Stopped "Low Luck for Bombing and Territory Damage" from controlling "bombingMaxDieSides" and "bombingBonus", and made it create a Low Luck situation on top of whatever dice sides and bonus the map uses. (veqryn)

* Fixing comparison method in weak ai. (veqryn)

* Allowed users to download maps even if they come with triplea. (veqryn) 

* Fixed Null pointer errors in Turn Summary Poster, and also fixed up Politics to display better in the turn summary with indents. Also stopped the poster from showing certain things like: game loaded, recording battle statistics, and giving bonus movement. (veqryn)

* Fixed a ton of lock not held errors that had resulted from new technology code. (veqryn)

* Fixed Economy panel so that it would change when you click back through history. (tao nie)
